--- a/config/bootstrap/bootstrap-cli-config.yml
+++ b/config/bootstrap/bootstrap-cli-config.yml
@@ -80,16 +80,28 @@ bootstrap:
                 idp-source-id: c7ab98c8-bcc2-46a8-a7e5-e80dd7a3915f #<AAD Group Object Id> # for the AAD Group to be matched to cdf-group
                 idp-source-name: bootcamp-12-proc-all-read #<AAD Group name> # i.e. bootcamp-01-test-all-read
 
-    namespaces:
-        # Typical config will have a namespace for data sources ("src") and a namespace for use cases ("uc")
-        - ns-name: <Namespace name>
-          description: Data sources for the Ice Cream Factory # HINT
+  namespaces:
+    # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+    - ns-name: src
+      description: Sources used for data extraction
+      # Description names will normally follow src:001:srcname or uc:001:usecasename naming convention
+      ns-nodes:
+        - node-name: src:001:sap
+          description: Source 01 data from SAP
+        - node-name: src:002:opcua
+          description: Source 02 data from opcua
+    # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+    - ns-name: uc
+      description: Use cases representing the data/products
 
-          # Node names will normally follow src:001:srcname or uc:001:usecasename naming convention
-          ns-nodes:
-              - node-name: <Node name>
-                description: Data from SAP # HINT
-        # HINT: Add another namespace below
+      # Description names will normally follow src:001:srcname or uc:001:usecasename naming convention
+      ns-nodes:
+        - node-name: uc:001:oee
+          description: Use case 001 Over all Equipment effectiveness
+          shared-access:
+            read:
+              - node-name: src:001:sap
+              - node-name: src:002:opcua
 
 
 # de-facto standards for CDF CogniteClient and logger configuration.
