--- a/config/bootstrap/bootstrap-cli-config.yml
+++ b/config/bootstrap/bootstrap-cli-config.yml
@@ -67,10 +67,10 @@ bootstrap:
               - cdf-group: cdf:all:read
                 idp-source-id: 154f4b8c-dfd1-41d6-8b5f-a817e0a9b8f3 #<AAD Group Object Id> # for the AAD Group to be matched to cdf-group
                 idp-source-name: bootcamp-12-test-all-read #<AAD Group name> # i.e. bootcamp-01-test-all-read
-              - cdf-group: cdf:oee:owner
+              - cdf-group: cdf:uc:001:oee:owner
                 idp-source-id: 6c00c77a-c05f-44d6-86ed-99601e7c5c37 # for the AAD Group to be matched to cdf-group
                 idp-source-name: bootcamp-12-test-uc-001-oee-owner # i.e. bootcamp-01-test-all-owner
-              - cdf-group: cdf:oee:read
+              - cdf-group: cdf:uc:001:oee:read
                 idp-source-id: c8fcab10-9c82-442f-bf80-56b0062b803c #<AAD Group Object Id> # for the AAD Group to be matched to cdf-group
                 idp-source-name: bootcamp-12-test-uc-001-oee-read #<AAD Group name> # i.e. bootcamp-01-test-all-read
                 
@@ -85,10 +85,10 @@ bootstrap:
               - cdf-group: cdf:all:read
                 idp-source-id: c7ab98c8-bcc2-46a8-a7e5-e80dd7a3915f #<AAD Group Object Id> # for the AAD Group to be matched to cdf-group
                 idp-source-name: bootcamp-12-prod-all-read #<AAD Group name> # i.e. bootcamp-01-test-all-read
-              - cdf-group: cdf:oee:owner
+              - cdf-group: cdf:uc:001:oee:owner
                 idp-source-id: 115b007f-7b04-498a-b070-d5bcdd9856cd # for the AAD Group to be matched to cdf-group
                 idp-source-name: bootcamp-12-prod-uc-001-oee-owner # i.e. bootcamp-01-test-all-owner
-              - cdf-group: cdf:oee:read
+              - cdf-group: cdf:uc:001:oee:read
                 idp-source-id: 249c4381-7b9e-4776-9ec9-41f5f90d80bc #<AAD Group Object Id> # for the AAD Group to be matched to cdf-group
                 idp-source-name: bootcamp-12-prod-uc-001-oee-read #<AAD Group name> # i.e. bootcamp-01-test-all-read
 
