--- a/.github/workflows/deploy-extpipes-cli.yaml
+++ b/.github/workflows/deploy-extpipes-cli.yaml
@@ -17,18 +17,18 @@ jobs:
                 include:
                     - environment: test
                       # CDF cluster, like bluefield, greenfield or westeurope-1
-                      CDF_CLUSTER: [CDF cluster]
+                      CDF_CLUSTER: westeurope-1 #[CDF cluster]
                       # CDF Project name
-                      CDF_PROJECT: [CDF project]
+                      CDF_PROJECT: cdf-bootcamp-12-test #[CDF project]
                       # Azure AD tenant id
-                      IDP_TENANT: [AAD tenant id]
-                    - environment: prod
+                      IDP_TENANT: 16e3985b-ebe8-4e24-9da4-933e21a9fc81 #[AAD tenant id]
+                    - environment: prod 
                       # CDF cluster, like bluefield, greenfield or westeurope-1
-                      CDF_CLUSTER: [CDF cluster]
+                      CDF_CLUSTER: westeurope-1 #[CDF cluster]
                       # CDF Project name
-                      CDF_PROJECT: [CDF project]
+                      CDF_PROJECT: cdf-bootcamp-12-prod #[CDF project]
                       # Azure AD tenant id
-                      IDP_TENANT: [AAD tenant id]
+                      IDP_TENANT: 16e3985b-ebe8-4e24-9da4-933e21a9fc81 #[AAD tenant id]
 
         environment: ${{ matrix.environment}}
         env:
